# Mes-Touches

./: .gitignore  Build.cpp  CMakeLists.txt  Clavier-Azerty.tif  Ease.hpp  Mes_Touches.sublime-workspace  eject.ps1  imgui.ini
src/: Common.cpp  Common.hpp  ErrorCode.hpp  ErrorCode_Win.cpp  Event.cpp  Event.hpp  File_Win.cpp  Logs.cpp  Logs.hpp  Main.cpp  Main32.cpp  Mes_Touches.rc  Mouse.cpp  Mouse.hpp  NotifyIcon.cpp  NotifyIcon.hpp  Screen.hpp  Screen_Win.cpp  Settings.cpp  Settings.hpp  TimeInfo.cpp  TimeInfo.hpp  cbt_hook.cpp  dbg.h  file.hpp  keyboard.cpp  keyboard.hpp  render_stats.cpp  render_stats.hpp  resource.h  xstd.hpp
src/OS/: FileInfo.hpp
src/OS/win/: FileInfo.cpp
src/imgui/: imgui.cpp  imgui.h  imgui_draw.cpp  imgui_ext.cpp  imgui_ext.h  imgui_impl_dx9.cpp  imgui_impl_opengl3.h  imgui_impl_win32.cpp  imgui_impl_win32.h  imgui_internal.h  imgui_widgets.cpp
